[package]
name = "ckks"
version = "0.1.0"
edition = "2021"
authors = ["Akram"]
description = "A Rust implementation of RNS-CKKS homomorphic encryption"
license = "MIT"

[dependencies]
# Complex number support for CKKS encoding/decoding
num-complex = "0.4"
# Traits for numeric types
num-traits = "0.2"
# Random number generation for key generation
rand = "0.8"
# Distributions for random sampling (Gaussian errors)
rand_distr = "0.4"
# For parallel computation over RNS limbs and keyswitch digits
rayon = "=1.8.1"
# Arbitrary precision integers (for testing/validation)
num-bigint = "0.4"

[dev-dependencies]
# For benchmarking (uncomment when ready)
# criterion = "0.5"

# [[bench]]
# name = "ntt_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true

[[example]]
name = "rns_round_trip"
path = "examples/operations/rns_round_trip.rs"

[[example]]
name = "rns_addition"
path = "examples/operations/rns_addition.rs"

[[example]]
name = "rns_hadamard_product"
path = "examples/operations/rns_hadamard_product.rs"

[[example]]
name = "rns_plain_mult"
path = "examples/operations/rns_plain_mult.rs"

[[example]]
name = "timings"
path = "examples/operations/timings.rs"

[[example]]
name = "rns_halevi_shoup_dot_product"
path = "examples/algorithmics/rns_halevi_shoup_dot_product.rs"

[[example]]
name = "rns_packed_diagonal_matvec"
path = "examples/algorithmics/rns_packed_diagonal_matvec.rs"

[[example]]
name = "rns_paterson_stockmeyer"
path = "examples/algorithmics/rns_paterson_stockmeyer.rs"

[[example]]
name = "rns_bootstrap_sparse_roundtrip"
path = "examples/algorithmics/rns_bootstrap_sparse_roundtrip.rs"

[[example]]
name = "rns_total_sum"
path = "examples/algorithmics/rns_total_sum.rs"

[[example]]
name = "ml_linear_regression"
path = "examples/ML/ml_linear_regression.rs"

[[example]]
name = "ml_logistic_regression"
path = "examples/ML/ml_logistic_regression.rs"

[[example]]
name = "ml_binary_svm"
path = "examples/ML/ml_binary_svm.rs"
